--- a/mockup/src/index.html
+++ b/mockup/src/index.html
@@ -15,7 +15,7 @@
 @@include('components/header.html')
 
   <div class="ag-format-container">
-
+    <h1>Title Home Page</h1>
   </div>
 
 @@include('components/footer.html')
