--- a/gulp-start/app/page-components/common/style-script/style-script.html
+++ b/gulp-start/app/page-components/common/style-script/style-script.html
@@ -1,4 +1,5 @@
 @@if (script === 'head') {
+  <link rel="stylesheet" href="plugins/slider-range/jquery-ui-1.11.0.css">
   <link rel="stylesheet" href="css/style.min.css" />
 }
 
@@ -13,5 +14,6 @@
   <script src="https://raw.githack.com/SochavaAG/example-mycode/master/pens/1_common/libs/jquery/jquery-1.12.4.min.js"></script>
   <script src="https://raw.githack.com/SochavaAG/example-mycode/master/pens/1_common/libs/jquery/jquery-migrate-1.4.1.min.js"></script>
 
+  <script src="plugins/slider-range/jquery-ui-1.12.1.min.js"></script>
   <script src="js/main.min.js"></script>
 }
